# spanner-cli

./: .gitignore  .pylintrc  LICENSE  Pipfile  README.md  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  publish.yml  pythonpackage.yml  pythonpublish.yml
spannercli/: __init__.py  __version__.py  commands.py  completion.py  lexer.py  main.py  queryutils.py  structures.py
spannercli/config/: __init__.py  constant.py  env.py  options.py
tests/: test_commands.py  test_config.py  test_queryutils.py
