[metadata]
license = MIT
license_file = LICENSE
description =A Python cli REPL client for Google Cloud Spanner.
long_description = file: README.md
long_description_content_type = text/markdown
author = Shoma Suzuki
author_email = shoma@catbot.net
classifiers =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: SQL
    Topic :: Database

[options]
install_requires =
    google-cloud-spanner
    prompt-toolkit
    cli-helpers
    pygments
    click

tests_require =
    flake8
    pytest
    autopep8
